[gd_scene load_steps=10 format=2]

[ext_resource path="res://other_scene/using_skeleton.tscn" type="PackedScene" id=1]
[ext_resource path="res://other_scene/chain.tscn" type="PackedScene" id=2]
[ext_resource path="res://path.png" type="Texture" id=3]
[ext_resource path="res://buttons/pedal-gas-normal.png" type="Texture" id=4]
[ext_resource path="res://buttons/pedal-gas-pressed.png" type="Texture" id=5]
[ext_resource path="res://buttons/pedal-brake-normal.png" type="Texture" id=6]
[ext_resource path="res://buttons/pedal-brake-pressed.png" type="Texture" id=7]
[ext_resource path="res://Node2D.gd" type="Script" id=8]

[sub_resource type="Animation" id=1]
resource_name = "New Anim"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2.5, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.392157, 0.952941, 0.913725, 1 ), Color( 0.392157, 1, 0.913725, 1 ), Color( 0.843137, 0.568627, 0.909804, 1 ), Color( 0.886275, 0.654902, 0.933333, 1 ), Color( 0.392157, 0.952941, 0.913725, 1 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 8 )

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.392157, 0.952941, 0.913725, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer2/ColorRect"]
"anims/New Anim" = SubResource( 1 )

[node name="Car" parent="." instance=ExtResource( 1 )]
position = Vector2( 365.1, -210.457 )
z_index = 2

[node name="chain" parent="." instance=ExtResource( 2 )]
position = Vector2( 3682.66, 441.232 )
rotation = 4.71239
scale = Vector2( 1, 2 )
z_index = 1

[node name="path" type="Sprite" parent="."]
scale = Vector2( 1, 0.6 )
texture = ExtResource( 3 )
centered = false

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 41.3482, 0.459793, 97.7389, -0.203613, 105.7, 5.10373, 112.998, 17.7087, 118.968, 41.5918, 122.949, 69.4554, 122.285, 121.202, 118.305, 184.227, 117.641, 239.291, 141.525, 289.047, 160.764, 310.94, 258.286, 308.286, 351.165, 287.057, 404.902, 270.471, 455.985, 255.213, 512.376, 239.954, 571.42, 231.993, 630.465, 217.398, 675.577, 208.11, 744.131, 202.775, 806.189, 203.215, 866.046, 207.176, 883.211, 207.176, 900.816, 210.257, 930.745, 212.458, 943.508, 215.979, 993.243, 221.26, 1005.57, 223.021, 1027.57, 225.662, 1047.82, 232.264, 1084.35, 243.707, 1163.57, 261.752, 1182.94, 264.393, 1207.14, 267.474, 1247.64, 279.357, 1268.32, 283.758, 1285.05, 291.24, 1313.65, 297.842, 1354.15, 310.606, 1366.03, 314.127, 1377.03, 316.328, 1394.64, 315.447, 1435.57, 309.726, 1461.98, 308.405, 1487.94, 307.525, 1525.36, 306.205, 1560.57, 300.923, 1585.65, 293.001, 1624.38, 279.797, 1648.15, 265.713, 1672.36, 247.228, 1704.05, 227.862, 1732.65, 210.697, 1758.18, 196.613, 1775.35, 189.131, 1798.67, 180.329, 1843.13, 162.284, 1908.36, 146.777, 1915.05, 146.777, 1950.17, 139.251, 1981.94, 138.415, 2027.1, 139.251, 2068.08, 143.014, 2103.2, 150.122, 2154.21, 160.575, 2172.19, 163.084, 2209.4, 172.701, 2242.01, 179.391, 2370.8, 214.095, 2381.25, 218.694, 2406.34, 221.203, 2431, 228.729, 2457.35, 237.509, 2482.43, 244.199, 2514.63, 255.489, 2544.73, 261.342, 2573.58, 268.032, 2591.56, 270.123, 2626.68, 273.886, 2642.15, 275.976, 2657.63, 280.994, 2691.91, 287.684, 2732.05, 302.736, 2775.95, 320.297, 2822.78, 338.694, 2870.87, 355.419, 2910.59, 362.945, 2952.82, 367.963, 3040.21, 377.58, 3105.43, 383.015, 3127.59, 383.851, 3152.68, 389.705, 3238.39, 401.83, 3303.62, 405.175, 3391.43, 400.576, 3483.41, 404.339, 3521.46, 407.266, 3621.39, 407.266, 3631.43, 410.611, 3654.01, 422.318, 3621.81, 411.029, 3561.6, 413.12, 3557, 489.218, 3623.9, 563.643, 3697.07, 599.183, 4138.61, 597.51, 4213.04, 499.609, 4291.64, 433.189, 4279.09, 408.52, 4210.52, 421.9, 4231.43, 408.52, 4264.04, 401.83, 4297.91, 398.904, 4321.32, 398.904, 4375.68, 394.304, 4431.71, 389.287, 4507.81, 391.377, 4678.82, 391.796, 4705.58, 393.05, 4722.72, 394.722, 4786.27, 393.886, 4821.81, 391.796, 4905.44, 391.796, 4932.62, 388.033, 4958.12, 386.778, 4981.12, 384.269, 5016.24, 376.325, 5046.76, 371.308, 5078.12, 360.018, 5088.57, 356.255, 5115.33, 346.221, 5144.6, 336.186, 5169.69, 327.405, 5191.85, 318.207, 5201.88, 317.788, 5239.1, 303.572, 5270.87, 292.283, 5290.94, 284.339, 5307.25, 280.994, 5345.72, 272.213, 5367.46, 265.942, 5398.4, 262.178, 5409.27, 260.924, 5429.34, 252.562, 5464.88, 243.363, 5520.07, 232.91, 5578.61, 230.819, 5628.37, 232.074, 5664.74, 236.673, 5694.85, 241.272, 5731.64, 244.199, 5773.45, 251.725, 5817.36, 265.523, 5860.84, 279.321, 5933.17, 294.374, 6008.02, 293.956, 6021.4, 292.701, 6059.03, 284.757, 6073.66, 281.83, 6105.44, 272.213, 6144.33, 265.942, 6170.67, 262.178, 6209.97, 252.144, 6249.69, 245.872, 6282.31, 235.419, 6304.88, 227.475, 6322.03, 224.548, 6354.22, 212.422, 6386, 198.206, 6399.38, 189.008, 6414.43, 183.572, 6429.07, 173.955, 6442.45, 168.52, 6461.68, 158.067, 6491.78, 145.523, 6519.38, 137.161, 6554.08, 125.871, 6586.28, 118.345, 6648.58, 112.492, 6659.45, 113.746, 6680.77, 111.237, 6695.41, 110.401, 6725.09, 108.31, 6759.38, 106.638, 6796.18, 106.638, 6803.7, 108.31, 6832.13, 108.729, 6853.04, 111.237, 6887.33, 117.509, 6928.72, 128.798, 6961.75, 133.398, 7015.69, 135.906, 7046.63, 129.635, 7059.59, 127.962, 7100.98, 119.182, 7129.84, 110.401, 7155.34, 105.384, 7211.37, 89.4951, 7223.08, 86.5682, 7233.95, 81.9689, 7254.02, 77.3696, 7287.47, 69.0072, 7314.23, 64.4079, 7330.11, 57.718, 7371.93, 51.0281, 7416.25, 42.2475, 7460.57, 38.9026, 7529.98, 38.9026, 7551.72, 38.4845, 7568.02, 40.5751, 7588.09, 45.1744, 7614.02, 48.1012, 7650.81, 54.373, 7700.99, 65.6622, 7717.29, 71.5159, 7737.78, 75.6971, 7750.74, 82.8051, 7774.58, 90.7494, 7791.3, 97.8575, 7809.7, 103.293, 7860.71, 115.837, 7880.36, 122.108, 7944.75, 127.962, 8036.74, 127.962, 8072.7, 130.053, 8112, 140.506, 8135.41, 145.941, 8176.81, 165.593, 8209, 182.318, 8262.52, 237.509, 8314.79, 289.356, 8324.82, 299.809, 8344.06, 326.569, 8345.31, 330.332, 8360.36, 343.294, 8375.42, 349.147, 8408.45, 357.092, 8487.05, 373.816, 8494.58, 375.907, 8511.72, 377.998, 8530.12, 382.179, 8553.95, 389.287, 8604.96, 406.43, 8613.33, 411.447, 8628.38, 413.956, 8649.28, 420.646, 8673.95, 429.008, 8694.86, 431.517, 8706.15, 435.28, 8717.44, 438.207, 8738.34, 440.297, 8863.78, 441.552, 8905.17, 436.116, 8954.09, 435.698, 8976.25, 433.608, 9014.3, 434.444, 9050.26, 431.935, 9118.83, 424.409, 9131.79, 420.228, 9204.96, 409.357, 9254.72, 404.757, 9270.61, 400.158, 9297.79, 396.813, 9306.98, 397.231, 9405.66, 396.813, 9432.84, 400.576, 9482.59, 407.266, 9625.59, 405.175, 9672.42, 384.688, 9692.07, 369.635, 9723.43, 344.548, 9744.34, 333.259, 9758.97, 318.207, 9776.53, 297.719, 9789.49, 273.05, 9791.58, 260.924, 9801.2, 251.725, 9805.8, 239.182, 9817.92, 228.311, 9829.21, 209.077, 9835.9, 196.534, 9846.78, 181.481, 9848.87, 178.555, 9861.41, 156.812, 9883.57, 125.871, 9888.17, 90.7494, 9887.75, 66.0804, 9891.1, 50.1918, 9891.93, 35.1395, 9894.02, 30.5402, 9896.11, 16.3241, 9914.51, 0.0174637, 10000.2, 0.0174637, 9944.72, 329.064, 9615.56, 555.014, 7559.7, 532.698, 4555.4, 571.751, 3908.23, 700.069, 3026.75, 560.593, 1721.26, 535.488, 58.7179, 566.172, 0.113346, 29.1083, 0.113346, -0.335794 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="TouchScreenButton" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 35.4894, 423.313 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 6 )
pressed = ExtResource( 7 )

[node name="TouchScreenButton2" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2( 838.193, 423.313 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 4 )
pressed = ExtResource( 5 )
[connection signal="animation_finished" from="CanvasLayer2/ColorRect/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="CanvasLayer/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="released" from="CanvasLayer/TouchScreenButton" to="." method="_on_TouchScreenButton_released"]
[connection signal="pressed" from="CanvasLayer/TouchScreenButton2" to="." method="_on_TouchScreenButton2_pressed"]
[connection signal="released" from="CanvasLayer/TouchScreenButton2" to="." method="_on_TouchScreenButton2_released"]
